<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>

    <string name="title_activity_main">THIRD EYE</string>
    <string name="title_activity_pdf">PDF GENERATOR</string>
    <string name="title_activity_ocr_capture">REAL TIME</string>
    <string name="title_activity_image_picker">IMAGE PICKER</string>
    <string name="title_activity_pager">PAGER</string>
    <string name="title_activity_qr_code_scanner">QR SCANNER</string>
    <string name="title_activity_qr_code_generator">QR GENERATOR</string>

    <string name="ocr_header">Third Eye</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Flash</string>
    <string name="word_by_word">Word</string>
    <string name="line_by_line">Line</string>
    <string name="block_by_block">Block</string>
    <string name="translation">Translation</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

    <string name="lang_prompt">Choose a Language</string>
    <string name="enter_text">Enter Text Here</string>
    <string name="enter_name">Enter Name Here</string>
    <string name="create_pdf">CREATE</string>
    <string name="back_cam_view">Back Camera View</string>
    <string name="empty" />
    <string name="reset">RESET</string>


    <string-array name="lang_arrays">
        <item>Bangla</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Spanish</item>
        <item>Russian</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="generate">GENERATE</string>
    <string name="save">SAVE</string>
    <string name="qr_preview">QR Preview</string>
    <string name="get_text">GET TEXT</string>
    <string name="select_image">Select Image</string>
    <string name="real_time">Real-time</string>
    <string name="image">IMAGE</string>
    <string name="qr">QR</string>
    <string name="retrieved_text">Retrieved Text</string>
    <string name="none">None</string>
    <string name="bangla">Bangla</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
    <string name="russian">Russian</string>
    <string name="selectedimage">SelectedImage</string>

</resources>
