<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QrCodeGeneratorActivity">

    <ImageView
        android:id="@+id/QR_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:contentDescription="@string/qr_preview" />
    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/QR_Image"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_name"
        android:padding="20dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_edit"
        android:layout_width="match_parent"
        android:layout_height ="wrap_content"
        android:layout_below="@+id/name_edit"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_text"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:minLines="5"
        android:maxLines="16"
        android:gravity="top|start"
        android:padding="20dp" />

    <me.rishabhkhanna.customtogglebutton.CustomToggleButton
        android:id="@+id/save_button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text_edit"
        android:layout_marginEnd="60dp"
        android:text="@string/save"
        android:textOff="@string/save"
        android:textOn="@string/save"
        android:textStyle="bold"
        android:layout_marginRight="60dp"
        android:layout_alignParentRight="true"
        app:borderWidth="3dp"
        app:checkedColor="@color/md_light_blue_A700"
        app:uncheckedColor="@color/md_light_blue_A700"
        app:uncheckedTextColor="#ffffff"
        app:checkedTextColor="#ffffff"
        app:radius="7dp">
    </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

    <me.rishabhkhanna.customtogglebutton.CustomToggleButton
        android:id="@+id/generate_button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_edit"
        android:layout_marginStart="60dp"
        android:text="@string/generate"
        android:textOff="@string/generate"
        android:textOn="@string/generate"
        android:textStyle="bold"
        android:layout_marginLeft="60dp"
        android:layout_alignParentLeft="true"
        app:borderWidth="3dp"
        app:checkedColor="@color/md_light_blue_A700"
        app:uncheckedColor="@color/md_light_blue_A700"
        app:checkedTextColor="#ffffff"
        app:uncheckedTextColor="#ffffff"
        app:radius="7dp">
    </me.rishabhkhanna.customtogglebutton.CustomToggleButton>



</RelativeLayout>