<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/ocr_header"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"/>

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:paddingHorizontal="30dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/app_name"
        android:contentDescription="@string/back_cam_view"
        android:src="@drawable/logo"/>

    <RelativeLayout
        android:id="@+id/modes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp">

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/real_time"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/real_time"
            android:textOff="@string/real_time"
            android:textOn="@string/real_time"
            app:borderWidth="3dp"
            app:checkedColor="@color/md_light_blue_A700"
            app:checkedTextColor="#ffffff"
            app:radius="7dp"
            app:uncheckedColor="@color/md_light_blue_A700"
            app:uncheckedTextColor="#ffffff"
            android:layout_marginTop="10dp">
        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/qr_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/real_time"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/qr"
            android:textOff="@string/qr"
            android:textOn="@string/qr"
            app:borderWidth="3dp"
            app:checkedColor="@color/md_light_blue_A700"
            app:checkedTextColor="#ffffff"
            app:radius="20dp"
            app:uncheckedColor="@color/md_light_blue_A700"
            app:uncheckedTextColor="#ffffff"
            android:layout_marginTop="10dp">
        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/image_picker_button"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_button"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/image"
            android:textOff="@string/image"
            android:textOn="@string/image"
            app:borderWidth="3dp"
            app:checkedColor="@color/md_light_blue_A700"
            app:checkedTextColor="#ffffff"
            app:radius="7dp"
            app:uncheckedColor="@color/md_light_blue_A700"
            app:uncheckedTextColor="#ffffff"
            android:layout_marginTop="10dp">
        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

        <com.nightonke.jellytogglebutton.JellyToggleButton
            android:id="@+id/translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_picker_button"
            android:layout_alignEnd="@+id/image_picker_button"
            android:layout_gravity="center"
            android:checked="false"
            app:jtbDuration="250"
            app:jtbLeftBackgroundColor="@color/md_red_900"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/translation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_picker_button"
            android:layout_alignStart="@+id/image_picker_button"
            android:paddingTop="7dp"
            android:text="@string/translation"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/lang_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/translation"
            android:layout_centerHorizontal="true"
            android:alwaysDrawnWithCache="true"
            android:dropDownSelector="@color/md_light_blue_900"
            android:entries="@array/lang_arrays"
            android:padding="5dp"
            android:prompt="@string/lang_prompt"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

</RelativeLayout>
